[project]
name = "alarm-mcp"
version = "0.1.0"
description = "An MCP server for event-driven alarms (cricket, news, prices, anything)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[project.scripts]
alarm-mcp = "alarm_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alarm_mcp"]
